--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <div class="content" id="enterFormula">
   <div id="menu">
-    <input type="checkbox" id="dropdown-btnMenu">
+    <input type="checkbox" id="dropdown-btnMenu"/>
     <label id="showMenu" for="dropdown-btnMenu">
       <span>Menu</span>
       <span>
@@ -51,6 +51,7 @@
           <li data-value="φ⇒φ">φ⇒φ</li>
           <li data-value="φ⇒¬¬φ">φ⇒¬¬φ</li>
           <li data-value="(φ⇒ψ)∧(ψ⇒θ)⇒(φ⇒θ)">(φ⇒ψ)∧(ψ⇒θ)⇒(φ⇒θ)</li>
+          <li data-value="ψ,φ⊢(φ⇒ψ)∧(ψ⇒θ)">ψ,φ⊢(φ⇒ψ)∧(ψ⇒θ)</li>
           <li data-value="multiline">
             (φ⇒θ)
             <br>
