--- a/index.html
+++ b/index.html
@@ -91,6 +91,20 @@
 
       </div>
     </div>
+    <div class="mainButtons" id="center">
+      <div class="mydict">
+        <div>
+          <label>
+            <input type="radio" name="radio" checked="">
+            <span>Gentzen</span>
+          </label>
+          <label>
+            <input type="radio" name="radio">
+            <span>Fitch</span>
+          </label>
+        </div>
+      </div>
+    </div>
     <div class="row">
       <div class="mainButtons" id="right">
         <button class="buttonMain" id="enter">
@@ -149,8 +163,11 @@
   </button>
 </div>
 
-<div id="proof">
+<div id="inputFitch">
+  <label id="userText">a->b->c</label>
+</div>
 
+<div id="proof">
 </div>
 
 <div id="hypotheses-container">
