--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <div class="content" id="enterFormula">
   <div id="menu">
-    <input type="checkbox" id="dropdown-btnMenu"/>
+    <input type="checkbox" id="dropdown-btnMenu" checked/>
     <label id="showMenu" for="dropdown-btnMenu">
       <span>Menu</span>
       <span>
@@ -265,7 +265,8 @@
             d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path>
         </svg>
       </button>
-      <span class="helpNavbarItem" style="color: rgba(0, 97, 161, 0.66);">Latex</span>
+      <span class="helpNavbarItem" style="color: rgba(0, 97, 161, 0.66);">Proof</span>
+      <span class="helpNavbarItem">Document</span>
     </div>
     <div id="latexInfo"></div>
     <button id="copyLatexCode">
