fix bugs and add main page

--- a/index.html
+++ b/index.html
@@ -142,6 +142,15 @@
 <br>
 
 
+<div class="returnMain">
+  <button id="home">
+    <div class="buttonIcon" style="margin: 0px 8px 0px 0px; height: 100%; width: 30px;">
+      <img src="img/home.svg" alt="SVG Icon" style="height: 100%; width: 100%;">
+    </div>
+    Main page
+  </button>
+</div>
+
 <div class="undoRedo" id="undo_redo">
   <button id="backwardButton">
     <div class="buttonIcon" style="margin: 0px 8px 0px 0px; height: 100%; width: 30px;">
