--- a/index.html
+++ b/index.html
@@ -201,12 +201,9 @@
     <button id="returnUserInput">
       Original proof
     </button>
-    <button id="switchNotationBtn">
-      Switch Notation
-      <!--    <div class="buttonIcon" style="margin: 0px 0px 0px 5px; height: 100%; width: 40px;">-->
-      <!--      <img src="img/latex.svg" alt="SVG Icon" style="height: 100%; width: 100%;">-->
-      <!--    </div>-->
-    </button>
+<!--    <button id="switchNotationBtn">-->
+<!--      Switch Notation-->
+<!--    </button>-->
     <button id="deleteParentheses">
       Remove parentheses
       <div class="buttonIcon" style="margin: 0px 0px 0px 10px; height: 100%; width: 30px;">
