--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
       <input type="radio" class="tab-toggle" name="tab-toggle" id="tab1" checked>
       <input type="radio" class="tab-toggle" name="tab-toggle" id="tab2">
       <input type="radio" class="tab-toggle" name="tab-toggle" id="tab3">
+      <input type="radio" class="tab-toggle" name="tab-toggle" id="tab4">
 
       <ul class="tab-list">
         <li class="tab-item">
@@ -225,7 +226,10 @@
           <label class="tab-trigger" for="tab2">Recommended rules</label>
         </li>
         <li class="tab-item">
-          <label class="tab-trigger" for="tab3">Tree</label>
+          <label class="tab-trigger" for="tab3">Axioms</label>
+        </li>
+        <li class="tab-item">
+          <label class="tab-trigger" for="tab4">Tree</label>
         </li>
       </ul>
 
