axioms, validator, handlers

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
   <div class="containerTabs">
     <div class="box">
       <input type="radio" class="tab-toggle" name="tab-toggle" id="tab1" checked>
-      <input type="radio" class="tab-toggle" name="tab-toggle" id="tab2">
+      <!-- <input type="radio" class="tab-toggle" name="tab-toggle" id="tab2"> -->
       <input type="radio" class="tab-toggle" name="tab-toggle" id="tab3">
       <input type="radio" class="tab-toggle" name="tab-toggle" id="tab4">
 
@@ -222,9 +222,9 @@
         <li class="tab-item">
           <label class="tab-trigger" for="tab1">All rules</label>
         </li>
-        <li class="tab-item">
+        <!-- <li class="tab-item">
           <label class="tab-trigger" for="tab2">Recommended rules</label>
-        </li>
+        </li> -->
         <li class="tab-item">
           <label class="tab-trigger" for="tab3">Axioms</label>
         </li>
