--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </span>
     </label>
     <div id="menuItems">
-      <button class="buttonMain" id="uploadBtn">
+      <button class="base-button buttonMain" id="uploadBtn">
         Upload
         <div class="buttonIcon" style="margin: 5px 0px 0px 10px; height: 100%; width: 24px;">
           <img src="img/upload.svg" alt="SVG Icon" style="height: 100%; width: 100%;">
@@ -61,7 +61,7 @@
           </li>
         </ul>
       </div>
-      <button class="buttonMain" id="helpBtn">
+      <button class="base-button buttonMain" id="helpBtn">
         Help
         <div class="buttonIcon" style="margin: 0px 0px 0px 10px; height: 100%; width: 24px;">
           <img src="img/help.svg" alt="SVG Icon" style="height: 100%; width: 100%;">
@@ -107,7 +107,7 @@
     </div>
     <div class="row">
       <div class="mainButtons" id="right">
-        <button class="buttonMain" id="enter">
+        <button class="base-button buttonMain" id="enter">
           Proof
           <div class="buttonIcon" style="margin: 0px 0px 0px 10px; height: 100%; width: 24px;">
             <img src="img/play.svg" alt="SVG Icon" style="height: 100%; width: 100%;">
@@ -142,7 +142,7 @@
 <br>
 
 <div class="returnMain">
-  <button id="home">
+  <button class="base-button" id="home">
     <div class="buttonIcon" style="margin: 0px 8px 0px 0px; height: 100%; width: 30px;">
       <img src="img/home.svg" alt="SVG Icon" style="height: 100%; width: 100%;">
     </div>
@@ -151,19 +151,19 @@
 </div>
 
 <div class="undoRedo" id="undo_redo">
-  <button id="backwardButton">
+  <button class="base-button" id="backwardButton">
     <div class="buttonIcon" style="margin: 0px 8px 0px 0px; height: 100%; width: 30px;">
       <img src="img/back-svgrepo-com.svg" alt="SVG Icon" style="height: 100%; width: 100%;">
     </div>
     New formula
   </button>
-  <button id="latex">
+  <button class="base-button" id="latex">
     Latex
     <div class="buttonIcon" style="margin: 0px 0px 0px 12px; height: 100%; width: 40px;">
       <img src="img/latex.svg" alt="SVG Icon" style="height: 100%; width: 100%;">
     </div>
   </button>
-  <button id="forwardButton">
+  <button class="base-button" id="forwardButton">
     Next
     <div class="buttonIcon" style="margin: 0px 0px 0px 8px; height: 100%; width: 30px;">
       <img src="img/go-svgrepo-com.svg" alt="SVG Icon" style="height: 100%; width: 100%;">
@@ -192,19 +192,19 @@
 
 <div class="proof-menu hidden" id="proof-menu">
   <div id="parentheses">
-    <button id="addParentheses">
+    <button class="base-button" id="addParentheses">
       Show parentheses
       <div class="buttonIcon" style="margin: 0px 0px 0px 10px; height: 100%; width: 30px;">
         <img src="img/show.svg" alt="SVG Icon" style="height: 100%; width: 100%;">
       </div>
     </button>
-    <button id="returnUserInput">
+    <button class="base-button" id="returnUserInput">
       Original proof
     </button>
 <!--    <button id="switchNotationBtn">-->
 <!--      Switch Notation-->
 <!--    </button>-->
-    <button id="deleteParentheses">
+    <button class="base-button" id="deleteParentheses">
       Remove parentheses
       <div class="buttonIcon" style="margin: 0px 0px 0px 10px; height: 100%; width: 30px;">
         <img src="img/hide.svg" alt="SVG Icon" style="height: 100%; width: 100%;">
