--- a/index.html
+++ b/index.html
@@ -175,7 +175,15 @@
   <label id="userText">a->b->c</label>
 </div>
 
-<div id="proof">
+<div id="proof-container">
+  <div id="proof">
+  </div>
+  <div class="proof-controls">
+    <button id="zoomInBtn" class="base-button" title="Zoom In">+</button>
+    <button id="zoomOutBtn" class="base-button" title="Zoom Out">-</button>
+    <button id="resetZoomBtn" class="base-button" title="Reset Zoom">Reset</button>
+  </div>
+  <div id="proof-resize-handle" title="Resize"></div>
 </div>
 
 <div id="hypotheses-container">
