--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
             <input type="radio" name="radio">
             <span>Fitch</span>
           </label>
+          <label>
+            <input type="radio" name="radio">
+            <span>Sequent</span>
+          </label>
         </div>
       </div>
     </div>
