--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
       <span class="helpNavbarItem" style="color: rgba(0, 97, 161, 0.66);">General</span>
       <span class="helpNavbarItem" style="color: rgb(80, 80, 80);">Syntax</span>
       <span class="helpNavbarItem" style="color: rgb(80, 80, 80);">Input</span>
+      <span class="helpNavbarItem" style="color: rgb(80, 80, 80);">Axioms</span>
     </div>
     <span id="info">
     </span>
