--- a/index.html
+++ b/index.html
@@ -100,9 +100,11 @@
       display: flex !important;
       flex-direction: column !important;
       align-items: center !important;
-      justify-content: center !important;
+      justify-content: flex-start !important;
       width: 100% !important;
       height: 100% !important;
+      padding: 35% !important;
+      box-sizing: border-box !important;
     }
 
     /* Fix Editor Container */
@@ -887,47 +889,48 @@
 
 <!-- Modals -->
 <div id="helpModal" class="helpModal">
-  <div class="help" style="background: rgb(255, 255, 255);">
-    <div class="helpNavbar" style="margin-bottom: 16px;">
+  <div class="help">
+    <div class="help-header">
+      <div class="help-title">
+        <i class="ri-question-fill" style="color: var(--col-accent);"></i>
+        Help & Documentation
+      </div>
       <button class="closeHelp">
-        <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="36px" width="36px"
-             xmlns="http://www.w3.org/2000/svg" style="color: rgba(0, 97, 161, 0.66);">
-          <path fill="none" d="M0 0h24v24H0z"></path>
-          <path
-            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path>
-        </svg>
+        <i class="ri-close-line" style="font-size: 24px;"></i>
       </button>
-      <span class="helpNavbarItem" style="color: rgba(0, 97, 161, 0.66);">General</span>
-      <span class="helpNavbarItem" style="color: rgb(80, 80, 80);">Syntax</span>
-      <span class="helpNavbarItem" style="color: rgb(80, 80, 80);">Input</span>
-      <span class="helpNavbarItem" style="color: rgb(80, 80, 80);">Axioms</span>
     </div>
-    <span id="info">
-    </span>
+    <div class="helpNavbar">
+      <div class="helpNavbarItem active">General</div>
+      <div class="helpNavbarItem">Syntax</div>
+      <div class="helpNavbarItem">Input</div>
+      <div class="helpNavbarItem">Axioms</div>
+    </div>
+    <div id="info">
+    </div>
   </div>
 </div>
 
 <div id="latexModal" class="helpModal">
-  <div class="help" id="latexCode" style="background: rgb(255, 255, 255);">
-    <div class="helpNavbar" style="margin-bottom: 16px;">
+  <div class="help" id="latexCode">
+    <div class="help-header">
+      <div class="help-title">
+        <i class="ri-file-code-line" style="color: var(--col-accent);"></i>
+        LaTeX Source
+      </div>
       <button class="closeLatex">
-        <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="36px" width="36px"
-             xmlns="http://www.w3.org/2000/svg" style="color: rgba(0, 97, 161, 0.66);">
-          <path fill="none" d="M0 0h24v24H0z"></path>
-          <path
-            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path>
-        </svg>
+        <i class="ri-close-line" style="font-size: 24px;"></i>
       </button>
-      <span class="helpNavbarItem" style="color: rgba(0, 97, 161, 0.66);">Proof</span>
-      <span class="helpNavbarItem">Document</span>
+    </div>
+    <div class="helpNavbar">
+      <div class="helpNavbarItem active">Proof</div>
+      <div class="helpNavbarItem">Document</div>
     </div>
     <div id="latexInfo"></div>
-    <button id="copyLatexCode">
-      Copy Latex
-      <div class="buttonIcon" style="margin: 0px 0px 0px 20px; height: 100%; width: 50px;">
-        <img src="img/copy.svg" alt="SVG Icon" style="height: 100%; width: 100%;">
-      </div>
-    </button>
+    <div class="help-footer">
+        <button id="copyLatexCode" class="btn btn-primary" style="width: 100%; justify-content: center;">
+          <i class="ri-file-copy-line"></i> Copy LaTeX
+        </button>
+    </div>
   </div>
 </div>
 
