--- a/index.html
+++ b/index.html
@@ -465,9 +465,9 @@
   </div>
 
   <div class="menu-group">
-    <div class="menu-title">System</div>
+    <div class="menu-title" data-i18n="nav-system">System</div>
 
-    <a href="#" class="nav-link active" id="nav-gentzen">
+    <a href="#" class="nav-link active" id="nav-gentzen" data-i18n="nav-gentzen">
       <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
            stroke-linecap="round" stroke-linejoin="round">
         <path d="M5 7h4"/>
@@ -478,7 +478,7 @@
       Gentzen
     </a>
 
-    <a href="#" class="nav-link" id="nav-fitch">
+    <a href="#" class="nav-link" id="nav-fitch" data-i18n="nav-fitch">
       <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"
            stroke-linecap="round" stroke-linejoin="round">
         <path d="M6 4V20"/>
@@ -489,7 +489,7 @@
       Fitch
     </a>
 
-    <a href="#" class="nav-link" id="nav-sequent">
+    <a href="#" class="nav-link" id="nav-sequent" data-i18n="nav-sequent">
       <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"
            stroke-linecap="round" stroke-linejoin="round">
         <path d="M8 6V18"/>
@@ -500,8 +500,8 @@
   </div>
 
   <div class="menu-group">
-    <div class="menu-title">Data</div>
-    <a href="#" class="nav-link" id="uploadBtn">
+    <div class="menu-title" data-i18n="nav-data">Data</div>
+    <a href="#" class="nav-link" id="uploadBtn" data-i18n="nav-upload">
       <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"
            stroke-linecap="round" stroke-linejoin="round">
         <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
@@ -510,7 +510,7 @@
       </svg>
       Upload
     </a>
-    <a href="#" class="nav-link" id="pasteExampleBtn"
+    <a href="#" class="nav-link" id="pasteExampleBtn" data-i18n="nav-example"
        onclick="document.getElementById('exampleList').classList.toggle('show'); return false;">
       <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"
            stroke-linecap="round" stroke-linejoin="round">
@@ -535,9 +535,9 @@
   </div>
 
   <div class="menu-group" style="margin-top: auto;">
-    <div class="menu-title">Support</div>
+    <div class="menu-title" data-i18n="nav-support">Support</div>
 
-    <a href="#" class="nav-link" id="helpBtn">
+    <a href="#" class="nav-link" id="helpBtn" data-i18n="nav-help">
       <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"
            stroke-linecap="round" stroke-linejoin="round">
         <circle cx="12" cy="12" r="10"></circle>
@@ -547,7 +547,7 @@
       Help
     </a>
 
-    <a href="#" class="nav-link" id="redirectButton">
+    <a href="#" class="nav-link" id="redirectButton" data-i18n="nav-feedback">
       <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"
            stroke-linecap="round" stroke-linejoin="round">
         <path
@@ -570,8 +570,8 @@
   </div>
 
   <div class="menu-group">
-    <div class="menu-title">System</div>
-    <a href="#" id="sb-home" class="nav-link">
+    <div class="menu-title" data-i18n="nav-system">System</div>
+    <a href="#" id="sb-home" class="nav-link" data-i18n="nav-home">
       <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"
            stroke-linecap="round" stroke-linejoin="round">
         <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
@@ -582,7 +582,7 @@
   </div>
 
   <div class="menu-group">
-    <div class="menu-title">Data</div>
+    <div class="menu-title" data-i18n="nav-data">Data</div>
 
     <a href="#" id="sb-smart-mode" class="nav-link">
       <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"
@@ -592,7 +592,7 @@
       Smart Mode
     </a>
 
-    <a href="#" id="sb-rules" class="nav-link active">
+    <a href="#" id="sb-rules" class="nav-link active" data-i18n="nav-rules">
       <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"
            stroke-linecap="round" stroke-linejoin="round">
         <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path>
@@ -601,7 +601,7 @@
       Rules
     </a>
 
-    <a href="#" id="sb-axiom" class="nav-link">
+    <a href="#" id="sb-axiom" class="nav-link" data-i18n="nav-axiom">
       <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"
            stroke-linecap="round" stroke-linejoin="round">
         <path
@@ -610,7 +610,7 @@
       Axiom
     </a>
 
-    <a href="#" id="sb-tree" class="nav-link">
+    <a href="#" id="sb-tree" class="nav-link" data-i18n="nav-tree">
       <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"
            stroke-linecap="round" stroke-linejoin="round">
         <circle cx="12" cy="5" r="3"></circle>
@@ -623,9 +623,9 @@
   </div>
 
   <div class="menu-group">
-    <div class="menu-title">Live Control</div>
+    <div class="menu-title" data-i18n="nav-live-control">Live Control</div>
 
-    <a id="backwardButton" href="#" class="nav-link">
+    <a id="backwardButton" href="#" class="nav-link" data-i18n="nav-undo">
       <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
         <path d="M3 7v6h6"></path>
         <path d="M21 17a9 9 0 0 0-9-9 9 9 0 0 0-6 2.3L3 13"></path>
@@ -633,7 +633,7 @@
       Undo Step
     </a>
 
-    <a id="forwardButton" href="#" class="nav-link">
+    <a id="forwardButton" href="#" class="nav-link" data-i18n="nav-redo">
       <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
         <path d="M21 7v6h-6"></path>
         <path d="M3 17a9 9 0 0 1 9-9 9 9 0 0 1 6 2.3l3 2.7"></path>
@@ -643,7 +643,7 @@
 
     <div style="height: 1px; background: #374151; margin: 8px 12px;"></div>
 
-    <a href="#" id="sb-plus" class="nav-link">
+    <a href="#" id="sb-plus" class="nav-link" data-i18n="nav-zoom-in">
       <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
         <circle cx="11" cy="11" r="8"></circle>
         <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
@@ -653,7 +653,7 @@
       Zoom In
     </a>
 
-    <a href="#" id="sb-minus" class="nav-link">
+    <a href="#" id="sb-minus" class="nav-link" data-i18n="nav-zoom-out">
       <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
         <circle cx="11" cy="11" r="8"></circle>
         <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
@@ -662,7 +662,7 @@
       Zoom Out
     </a>
 
-    <a href="#" id="sb-reset" class="nav-link" style="color: #fca5a5;">
+    <a href="#" id="sb-reset" class="nav-link" style="color: #fca5a5;" data-i18n="nav-fit">
       <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
         <path d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"></path>
       </svg>
@@ -671,7 +671,7 @@
 
     <div style="height: 1px; background: #374151; margin: 8px 12px;"></div>
 
-    <a href="#" id="sb-show-parens" class="nav-link">
+    <a href="#" id="sb-show-parens" class="nav-link" data-i18n="nav-show-parens">
       <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"
            stroke-linecap="round" stroke-linejoin="round">
         <path d="M8 4a8 8 0 0 0 0 16"></path>
@@ -681,7 +681,7 @@
       Show parentheses
     </a>
 
-    <a href="#" id="sb-original" class="nav-link">
+    <a href="#" id="sb-original" class="nav-link" data-i18n="nav-original">
       <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"
            stroke-linecap="round" stroke-linejoin="round">
         <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
@@ -692,7 +692,7 @@
       Original
     </a>
 
-    <a href="#" id="sb-hide-parens" class="nav-link">
+    <a href="#" id="sb-hide-parens" class="nav-link" data-i18n="nav-hide-parens">
       <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"
            stroke-linecap="round" stroke-linejoin="round">
         <path d="M8 4a8 8 0 0 0 0 16"></path>
@@ -704,9 +704,9 @@
   </div>
 
   <div class="menu-group">
-    <div class="menu-title">Export</div>
+    <div class="menu-title" data-i18n="nav-export">Export</div>
 
-    <a href="#" id="sb-latex" class="nav-link">
+    <a href="#" id="sb-latex" class="nav-link" data-i18n="nav-latex">
       <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"
            stroke-linecap="round" stroke-linejoin="round">
         <polyline points="16 18 22 12 16 6"></polyline>
@@ -717,9 +717,9 @@
   </div>
 
   <div class="menu-group" style="margin-top: auto;">
-    <div class="menu-title">Support</div>
+    <div class="menu-title" data-i18n="nav-support">Support</div>
 
-    <a href="#" id="sb-help" class="nav-link">
+    <a href="#" id="sb-help" class="nav-link" data-i18n="nav-help">
       <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"
            stroke-linecap="round" stroke-linejoin="round">
         <circle cx="12" cy="12" r="10"></circle>
@@ -729,7 +729,7 @@
       Help
     </a>
 
-    <a href="#" id="sb-feedback" class="nav-link">
+    <a href="#" id="sb-feedback" class="nav-link" data-i18n="nav-feedback">
       <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"
            stroke-linecap="round" stroke-linejoin="round">
         <path
@@ -744,7 +744,7 @@
 
   <header class="top-header">
     <div class="header-left">
-      <div class="custom-select" style="position: relative; padding: 0; display: block; width: 180px;">
+      <div class="custom-select" style="position: relative; padding: 0; display: block; width: auto;">
         <i class="ri-text"
            style="position: absolute; left: 12px; top: 50%; transform: translateY(-50%); pointer-events: none; z-index: 1;"></i>
         <select id="font-size-select" style="
@@ -763,12 +763,12 @@
             cursor: pointer;
             outline: none;
         ">
-          <option value="20" selected>Font Size: 20px</option>
-          <option value="26">Font Size: 26px</option>
-          <option value="32">Font Size: 32px</option>
-          <option value="38">Font Size: 38px</option>
-          <option value="44">Font Size: 44px</option>
-          <option value="50">Font Size: 50px</option>
+          <option value="20" selected data-i18n="font-size-label">Font Size: 20px</option>
+          <option value="26" data-i18n="font-size-label">Font Size: 26px</option>
+          <option value="32" data-i18n="font-size-label">Font Size: 32px</option>
+          <option value="38" data-i18n="font-size-label">Font Size: 38px</option>
+          <option value="44" data-i18n="font-size-label">Font Size: 44px</option>
+          <option value="50" data-i18n="font-size-label">Font Size: 50px</option>
         </select>
         <i class="ri-arrow-down-s-line"
            style="position: absolute; right: 12px; top: 50%; transform: translateY(-50%); pointer-events: none; color: #9ca3af; z-index: 1;"></i>
@@ -779,17 +779,17 @@
       <div style="width: 1px; height: 24px; background: #e5e7eb; margin: 0 8px;"></div>
 
       <div class="lang-switcher">
-        <div class="lang-opt active">SK</div>
-        <div class="lang-opt">EN</div>
+        <div class="lang-opt active">EN</div>
+        <div class="lang-opt">SK</div>
         <div class="lang-opt">UA</div>
       </div>
 
-      <div class="theme-toggle" title="Switch Theme">
+      <div class="theme-toggle" data-i18n-title="theme-toggle" title="Switch Theme">
         <i class="ri-sun-fill" style="color: #f59e0b; margin-left: 5px;"></i>
         <i class="ri-moon-clear-line" style="margin-right: 5px;"></i>
       </div>
 
-      <button class="btn btn-primary" style="margin-left: 12px;" id="enter">
+      <button class="btn btn-primary" style="margin-left: 12px;" id="enter" data-i18n="btn-proof">
         <i class="ri-play-fill"></i> Proof
       </button>
     </div>
@@ -819,11 +819,11 @@
         <div id="hypotheses-container"
              style="background: white; border: 1px solid var(--col-border); border-radius: 12px; padding: 15px; flex-shrink: 0;">
           <div class="hypotheses-block">
-            <label class="labelHypotheses" id="labelHypotheses">All Hypotheses</label>
+            <label class="labelHypotheses" id="labelHypotheses" data-i18n="label-all-hypotheses">All Hypotheses</label>
             <div id="allHypotheses"></div>
           </div>
           <div class="hypotheses-block">
-            <label class="labelHypotheses" id="currentLabelHypotheses">Current Hypotheses</label>
+            <label class="labelHypotheses" id="currentLabelHypotheses" data-i18n="label-current-hypotheses">Current Hypotheses</label>
             <div id="currentHypotheses" class="leftBorder"></div>
           </div>
         </div>
@@ -843,13 +843,13 @@
 
                                     <ul class="tab-list" style="display: none;">
                                       <li class="tab-item">
-                                        <label class="tab-trigger" for="tab1">Rules</label>
+                                        <label class="tab-trigger" for="tab1" data-i18n="tab-rules">Rules</label>
                                       </li>
                                       <li class="tab-item">
-                                        <label class="tab-trigger" for="tab3">Axioms</label>
+                                        <label class="tab-trigger" for="tab3" data-i18n="tab-axioms">Axioms</label>
                                       </li>
                                       <li class="tab-item">
-                                        <label class="tab-trigger" for="tab4">Tree</label>
+                                        <label class="tab-trigger" for="tab4" data-i18n="tab-tree">Tree</label>
                                       </li>
                                     </ul>
               <div class="tab-container" style="padding: 15px 0; flex-grow: 1; overflow-y: auto;">
